--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,8 @@
 # MYSQL
-MYSQL_ENGINE=
-MYSQL_VERSION=
-MYSQL_ROOT_PASSWORD=
+MYSQL_HOST=
+MYSQL_USER=
+MYSQL_PASSWORD=
 MYSQL_DATABASE=whaticket
-MYSQL_PORT=
-TZ=
 
 # BACKEND
 BACKEND_PORT=
