--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,9 +10,9 @@ services:
       context: ./backend
       dockerfile: ./Dockerfile
     environment:
-      - DB_HOST=mysql
-      - DB_USER=root
-      - DB_PASS=${MYSQL_ROOT_PASSWORD:-strongpassword}
+      - DB_HOST=${MYSQL_HOST:-mysql}
+      - DB_USER=${MYSQL_USER:-whaticket}
+      - DB_PASS=${MYSQL_PASSWORD:-strongpassword}
       - DB_NAME=${MYSQL_DATABASE:-whaticket}
       - JWT_SECRET=${JWT_SECRET:-3123123213123}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET:-75756756756}
@@ -27,11 +27,12 @@ services:
       - ./backend/.wwebjs_auth/:/usr/src/app/.wwebjs_auth/
     networks:
       - whaticket
+    restart: always
 
   frontend:
     ports:
       - ${FRONTEND_PORT:-3000}:80
-      - ${FRONTEND_SSL_PORT:-3001}:443
+      - ${FRONTEND_SSL_PORT:-3002}:443
     build:
       context: ./frontend
       dockerfile: ./Dockerfile
@@ -45,18 +46,19 @@ services:
       - ./ssl/www/:/var/www/letsencrypt/
     networks:
       - whaticket
-
-  mysql:
-    image: ${MYSQL_ENGINE:-mariadb}:${MYSQL_VERSION:-10.6}
-    command: --character-set-server=utf8mb4 --collation-server=utf8mb4_bin    
-    volumes:
-      - ./.docker/data/:/var/lib/mysql
-    environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE:-whaticket}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-strongpassword}
-      - TZ=${TZ:-America/Fortaleza}
-    ports:
-      - ${MYSQL_PORT:-3306}:3306
     restart: always
-    networks:
-      - whaticket
+
+  # mysql:
+  #   image: ${MYSQL_ENGINE:-mariadb}:${MYSQL_VERSION:-10.6}
+  #   command: --character-set-server=utf8mb4 --collation-server=utf8mb4_bin    
+  #   volumes:
+  #     - ./.docker/data/:/var/lib/mysql
+  #   environment:
+  #     - MYSQL_DATABASE=${MYSQL_DATABASE:-whaticket}
+  #     - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD:-strongpassword}
+  #     - TZ=${TZ:-America/Fortaleza}
+  #   ports:
+  #     - ${MYSQL_PORT:-3306}:3306
+  #   restart: always
+  #   networks:
+  #     - whaticket
